[project]
name = "naga"
version = "0.1.0"
authors = [ {name="Quentin Febvre", email="quentin.febvre@gmail.com"} ]
description = "A lightweight and painless MLOps library"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
test = { cmd = "pytest" }

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.2,<9"
pytest-mock = ">=3.14.0,<4"

[tool.pixi.dependencies]
xxhash = ">=0.8.3,<0.9"
python = "3.11.*"
dvc = ">=3.63.0,<4"
omegaconf = ">=2.3.0,<3"
gitpython = ">=3.1.45,<4"
python-xxhash = ">=3.5.0,<4"
mlflow = ">=3.2.0,<4"
joblib = ">=1.5.2,<2"
pandas = ">=2.3.2,<3"
submitit = ">=1.5.2,<2"

[tool.pixi.pypi-dependencies]
xxhash = ">=3.5.0, <4"
dirhash = ">=0.5.0, <0.6"
naga = { path = ".", editable = true }

[tool.pixi.environments]
test = { features = ["test"], solve-group = "test" }
