[project]
name = "flexlock"
version = "0.1.9"
authors = [ {name="Quentin Febvre", email="quentin.febvre@gmail.com"} ]
description = "A lightweight and painless SciOps library"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[tool.pixi.package]
name = "flexlock"
version = "0.1.9"

[build-system] 
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["flexlock"]
only-packages = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]
preview = ["pixi-build"]


[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"
channels = ["https://prefix.dev/pixi-build-backends", "conda-forge"]

[tool.pixi.package.host-dependencies]
hatchling = "*"

[tool.pixi.package.run-dependencies]
python = "3.11.*"
gitpython = ">=3.1.45,<4"
python-xxhash = ">=3.5.0,<4"
mlflow = ">=3.2.0,<4"
joblib = ">=1.5.2,<2"
pandas = ">=2.3.2,<3"
submitit = ">=1.5.2,<2"
omegaconf = ">=2.3.0,<3"
loguru = ">=0.7.0,<1"

[tool.pixi.tasks]
test = { cmd = "pytest" }

[tool.pixi.feature.build.dependencies]
flexlock = {path = "."}

[tool.pixi.feature.build.pypi-dependencies]
build = "*"
twine = "*"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.2,<9"
pytest-mock = ">=3.14.0,<4"
ipython = "*"

[tool.pixi.feature.test.pypi-dependencies]
flexlock = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.11.*"
gitpython = ">=3.1.45,<4"
python-xxhash = ">=3.5.0,<4"
mlflow = ">=3.2.0,<4"
joblib = ">=1.5.2,<2"
pandas = ">=2.3.2,<3"
submitit = ">=1.5.2,<2"
omegaconf = ">=2.3.0,<3"
loguru = ">=0.7.3,<0.8"

[tool.pixi.environments]
build = { features = ["build"] }
default = { features = ["test"] }
