[project]
name = "flexlock"
version = "0.2.11"
authors = [ {name="Quentin Febvre", email="quentin.febvre@gmail.com"} ]
description = "A lightweight and painless SciOps library"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[tool.pixi.package]
name = "flexlock"
version = "0.2.11"

[build-system] 
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
only-include = ["flexlock"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]
preview = ["pixi-build"]


[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"
channels = ["https://prefix.dev/pixi-build-backends", "conda-forge"]

[tool.pixi.package.host-dependencies]
hatchling = "*"

[tool.pixi.package.run-dependencies]
python = "3.11.*"
gitpython = ">=3.1.45,<4"
python-xxhash = ">=3.5.0,<4"
joblib = ">=1.5.2,<2"
pandas = ">=2.3.2,<3"
omegaconf = ">=2.3.0,<3"
loguru = ">=0.7.0,<1"
cloudpickle = ">=3.0.0,<4"

[tool.pixi.tasks]
test = { cmd = "pytest" }

[tool.pixi.feature.docs.dependencies]
sphinx = "*"
myst-parser = "*"

[tool.pixi.feature.docs.pypi-dependencies]
sphinx_rtd_theme = "*"

[tool.pixi.feature.build.dependencies]
flexlock = {path = "."}

[tool.pixi.feature.build.pypi-dependencies]
build = "*"
twine = "*"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.2,<9"
pytest-mock = ">=3.14.0,<4"
ipython = "*"

[tool.pixi.feature.test.pypi-dependencies]
flexlock = { path = ".", editable = true }

[tool.pixi.feature.mlflow.dependencies]
mlflow = ">=3.2.0,<4"


[tool.pixi.dependencies]
python = "3.11.*"
gitpython = ">=3.1.45,<4"
python-xxhash = ">=3.5.0,<4"
joblib = ">=1.5.2,<2"
pandas = ">=2.3.2,<3"
omegaconf = ">=2.3.0,<3"
loguru = ">=0.7.3,<0.8"
cloudpickle = ">=3.0.0,<4"

[tool.pixi.environments]
build = { features = ["build"] }
default = { features = ["test", "mlflow"] }
docs = { features = ["test", "docs"] }
